# python-math-interpreter

./: README.md  pyproject.toml  run.py
src/math_interpreter/: cli.py  interpreter.py  lexer.py  nodes.py  parser.py  tokens.py
src/tests/: test_cli.py  test_interpreter.py  test_lexer.py  test_nodes.py  test_parser.py  test_tokens.py
